--- a/TestMakerFreeWebApp/ClientApp/app/components/home/home.component.html
+++ b/TestMakerFreeWebApp/ClientApp/app/components/home/home.component.html
@@ -1,2 +1,5 @@
-<h1>Greetings, Stranger!</h1>
-<p>This is what you get for messing up with the .Net Core and Angular</p>
+<h1>Welcome to TestMakerFree</h1>
+<p>A sample SPA project made with .Net Core and Angular.</p>
+<quiz-list class="latest"></quiz-list>
+<quiz-list class="byTitle"></quiz-list>
+<quiz-list class="random"></quiz-list>
