--- a/TestMakerFreeWebApp/ClientApp/app/components/result/result-edit.component.html
+++ b/TestMakerFreeWebApp/ClientApp/app/components/result/result-edit.component.html
@@ -1,23 +1,29 @@
 ﻿<h2>{{title}}</h2>
 <div class="result-edit">
-    <div>
+    <div class="form-group">
         <label for="text">Result text:</label>
         <br />
-        <textarea id="text" [(ngModel)]="result.Text" placeholder="Enter a suitable text..."></textarea>
+        <textarea id="text" [(ngModel)]="result.Text" placeholder="Enter a suitable text..." class="form-control"></textarea>
     </div>
-    <div>
+    <div class="form-group">
         <label for="MinValue">Minimum Score Value:</label>
         <br />
-        <input type="number" id="MinValue" name="MinValue" [(ngModel)]="result.MinValue" />
+        <input type="number" id="MinValue" name="MinValue" [(ngModel)]="result.MinValue" class="form-control"/>
     </div>
-    <div>
+    <div class="form-group">
         <label for="MaxValue">Maximum Score Value:</label>
         <br />
-        <input type="number" id="MaxValue" name="MaxValue" [(ngModel)]="result.MaxValue" />
+        <input type="number" id="MaxValue" name="MaxValue" [(ngModel)]="result.MaxValue" class="form-control"/>
     </div>
     <div>
-        <input *ngIf="editMode" type="button" value="Apply Changes" (click)="onSubmit(result)" />
-        <input *ngIf="!editMode" type="button" value="Create the Result!" (click)="onSubmit(result)"/>
-        <input type="button" value="Cancel" (click)="onBack()"/>
+        <button *ngIf="editMode" (click)="onSubmit(result)" class="btn btn-sm btn-success">
+            <span class="glyphicon glyphicon-save"></span>
+            Apply Changes
+        </button>
+        <button *ngIf="!editMode" (click)="onSubmit(result)" class="btn btn-sm btn-success">
+            <span class="glyphicon glyphicon-save"></span>
+            Create the Result!
+        </button>
+        <input type="button" value="Cancel" (click)="onBack()" class="btn btn-sm btn-primary"/>
     </div>
 </div>
