--- a/TestMakerFreeWebApp/ClientApp/app/components/result/result-list.component.html
+++ b/TestMakerFreeWebApp/ClientApp/app/components/result/result-list.component.html
@@ -1,31 +1,42 @@
 ﻿<h3>Results</h3>
 <div *ngIf="results.length > 0">
-    <table class="results">
-        <thead>
-            <tr>
-                <th>Text</th>
-                <th>Min. Value</th>
-                <th>Max. Value</th>
-                <th>Options</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let result of results">
-                <td>{{result.Text}}</td>
-                <td *ngIf="result.MinValue ===null">N/A</td>
-                <td *ngIf="result.MinValue !==null">{{result.MinValue}}</td>
-                <td *ngIf="result.MaxValue ===null">N/A</td>
-                <td *ngIf="result.MaxValue !==null">{{result.MaxValue}}</td>
-                <td>
-                    <input type="button" value="Edit" (click)="onEdit(result)" />
-                    <input type="button" value="Delete" (click)="onDelete(result)" />
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table table-hover results">
+            <thead>
+                <tr>
+                    <th>Text</th>
+                    <th>Min. Value</th>
+                    <th>Max. Value</th>
+                    <th>Options</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let result of results">
+                    <td>{{result.Text}}</td>
+                    <td *ngIf="result.MinValue ===null">N/A</td>
+                    <td *ngIf="result.MinValue !==null">{{result.MinValue}}</td>
+                    <td *ngIf="result.MaxValue ===null">N/A</td>
+                    <td *ngIf="result.MaxValue !==null">{{result.MaxValue}}</td>
+                    <td>
+                        <button (click)="onEdit(result)" class="btn btn-xs btn-warning">
+                            <span class="glyphicon glyphicon-edit"></span>
+                            Edit
+                        </button>
+                        <button (click)="onDelete(result)" class="btn btn-xs btn-danger">
+                            <span class="glyphicon glyphicon-remove"></span>
+                            Delete
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 <div *ngIf="results.length == 0">
     This quiz has no results (yet): click the <strong>Add a new Result</strong> button
     to add the first one!
 </div>
-<input type="button" value="Add a New Result" (click)="onCreate()"/>
+<button (click)="onCreate()" class="btn btn-sm btn-primary">
+    <span class="glyphicon glyphicon-plus"></span>
+    Add a New Result
+</button>
